Closed Bug 394542 Opened 17 years ago Closed 17 years ago

we leak the blink timer and its timer in a cycle

Categories

(Core :: Layout: Text and Fonts, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: dbaron)

References

()

Details

(Keywords: memory-leak)

Attachments

(1 file)

Whenever we use the blink timer, we leak the nsBlinkTimer and its nsTimerImpl in a cycle.  Right now we create a new nsTimerImpl each time the blink timer count goes above zero (nsBlinkTimer::Start), but we keep the same nsBlinkTimer around (since its mTimer owns it until we hit nsBlinkTimer::Start again).  Fixing the leak means they should either both stay around or both go away.  Making them both go away is a one-line patch, so I'll do that.

Note that fixing bug 330128 would also fix this.
Attached patch patchSplinter Review
Attachment #279220 - Flags: superreview?(roc)
Attachment #279220 - Flags: review?(roc)
Blocks: 394517
Attachment #279220 - Flags: superreview?(roc)
Attachment #279220 - Flags: superreview+
Attachment #279220 - Flags: review?(roc)
Attachment #279220 - Flags: review+
Comment on attachment 279220 [details] [diff] [review]
patch

Please land ASAP, during the M8 freeze.
Attachment #279220 - Flags: approval1.9? → approval1.9+
I landed this so it would make M8.

Checking in nsTextFrameThebes.cpp;
/cvsroot/mozilla/layout/generic/nsTextFrameThebes.cpp,v  <--  nsTextFrameThebes.cpp
new revision: 3.83; previous revision: 3.82
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
This only got freeze approval because my approval request took a while to be processed, and was still hanging around after the freeze started.  But anyway...
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: