Bug 394542. we leak the blink timer and its timer in a cycle. Patch by David Baron. r/sr=roc, a=dsicore/mconnor